# vmecpp

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE.txt  README.md  environment.yml  pyproject.toml  ubuntu_24_packages.txt
src/cpp/: MODULE.bazel  WORKSPACE.bazel
src/vmecpp/cpp/: .bazelrc  .gitattributes  CMakeLists.txt  MODULE.bazel  WORKSPACE.bazel
src/vmecpp/cpp/util/: CMakeLists.txt
src/vmecpp/cpp/util/file_io/: BUILD.bazel  CMakeLists.txt  file_io.cc  file_io.h  file_io_test.cc
src/vmecpp/cpp/util/hdf5_io/: BUILD.bazel  CMakeLists.txt  hdf5_io.cc  hdf5_io.h
src/vmecpp/cpp/util/json_io/: BUILD.bazel  CMakeLists.txt  json_io.cc  json_io.h  json_io_test.cc
src/vmecpp/cpp/util/netcdf_io/: BUILD.bazel  CMakeLists.txt  example_netcdf.nc  netcdf_io.cc  netcdf_io.h  netcdf_io_test.cc
src/vmecpp/cpp/util/test_data/: BUILD.bazel
src/vmecpp/cpp/util/testing/: BUILD.bazel  CMakeLists.txt  numerical_comparison_lib.cc  numerical_comparison_lib.h  numerical_comparison_test.cc
src/vmecpp/cpp/vmecpp/: CMakeLists.txt
src/vmecpp/cpp/vmecpp/common/: CMakeLists.txt
src/vmecpp/cpp/vmecpp/common/composed_types_definition/: BUILD.bazel  CMakeLists.txt  composed_types.h  composed_types.proto
src/vmecpp/cpp/vmecpp/common/composed_types_lib/: BUILD.bazel  CMakeLists.txt  composed_types_lib.cc  composed_types_lib.h  composed_types_lib_test.cc
src/vmecpp/cpp/vmecpp/common/flow_control/: BUILD.bazel  CMakeLists.txt  flow_control.cc  flow_control.h
src/vmecpp/cpp/vmecpp/common/fourier_basis_fast_poloidal/: BUILD.bazel  CMakeLists.txt  fourier_basis_fast_poloidal.cc  fourier_basis_fast_poloidal.h  fourier_basis_fast_poloidal_test.cc
src/vmecpp/cpp/vmecpp/common/fourier_basis_fast_toroidal/: BUILD.bazel  CMakeLists.txt  fourier_basis_fast_toroidal.cc  fourier_basis_fast_toroidal.h  fourier_basis_fast_toroidal_test.cc
src/vmecpp/cpp/vmecpp/common/magnetic_configuration_definition/: BUILD.bazel  CMakeLists.txt  magnetic_configuration.h  magnetic_configuration.proto
src/vmecpp/cpp/vmecpp/common/magnetic_configuration_lib/: BUILD.bazel  CMakeLists.txt  magnetic_configuration_lib.cc  magnetic_configuration_lib.h  magnetic_configuration_lib_test.cc
src/vmecpp/cpp/vmecpp/common/magnetic_field_provider/: BUILD.bazel  CMakeLists.txt  magnetic_field_provider_lib.cc  magnetic_field_provider_lib.h  magnetic_field_provider_lib_test.cc
src/vmecpp/cpp/vmecpp/common/makegrid_lib/: BUILD.bazel  CMakeLists.txt  create_reference_mgrid.sh  makegrid_lib.cc  makegrid_lib.h  makegrid_lib_test.cc
src/vmecpp/cpp/vmecpp/common/sizes/: BUILD.bazel  CMakeLists.txt  sizes.cc  sizes.h
src/vmecpp/cpp/vmecpp/common/util/: BUILD.bazel  CMakeLists.txt  util.cc  util.h  util_test.cc
src/vmecpp/cpp/vmecpp/common/vmec_indata/: BUILD.bazel  CMakeLists.txt  boundary_from_json.cc  boundary_from_json.h  vmec_indata.cc  vmec_indata.h  vmec_indata_test.cc
src/vmecpp/cpp/vmecpp/free_boundary/: CMakeLists.txt
src/vmecpp/cpp/vmecpp/free_boundary/external_magnetic_field/: BUILD.bazel  CMakeLists.txt  external_magnetic_field.cc  external_magnetic_field.h
src/vmecpp/cpp/vmecpp/free_boundary/free_boundary_base/: BUILD.bazel  CMakeLists.txt  free_boundary_base.h
src/vmecpp/cpp/vmecpp/free_boundary/laplace_solver/: BUILD.bazel  CMakeLists.txt  laplace_solver.cc  laplace_solver.h
src/vmecpp/cpp/vmecpp/free_boundary/mgrid_provider/: BUILD.bazel  CMakeLists.txt  mgrid_provider.cc  mgrid_provider.h
src/vmecpp/cpp/vmecpp/free_boundary/nestor/: BUILD.bazel  CMakeLists.txt  nestor.cc  nestor.h
src/vmecpp/cpp/vmecpp/free_boundary/regularized_integrals/: BUILD.bazel  CMakeLists.txt  regularized_integrals.cc  regularized_integrals.h
src/vmecpp/cpp/vmecpp/free_boundary/singular_integrals/: BUILD.bazel  CMakeLists.txt  singular_integrals.cc  singular_integrals.h  singular_integrals_test.cc
src/vmecpp/cpp/vmecpp/free_boundary/surface_geometry/: BUILD.bazel  CMakeLists.txt  surface_geometry.cc  surface_geometry.h  surface_geometry_test.cc
src/vmecpp/cpp/vmecpp/free_boundary/surface_geometry_mockup/: BUILD.bazel  lcfs.SurfaceRZFourier.csv  surface_geometry_mockup.cc  surface_geometry_mockup.h
src/vmecpp/cpp/vmecpp/free_boundary/tangential_partitioning/: BUILD.bazel  CMakeLists.txt  tangential_partitioning.cc  tangential_partitioning.h
src/vmecpp/cpp/vmecpp/simsopt_compat/: README.md  __init__.py  _fortran_wout_adapter.py  _fortran_wout_adapter_test.py  _indata_to_surfacerzfourier.py  _indata_to_surfacerzfourier_test.py  _vmec_indata_compat.py  _vmec_indata_compat_test.py
src/vmecpp/cpp/vmecpp/test_data/: BUILD.bazel  circular_tokamak.json  cma.json  coils.cth_like  cth_like_fixed_bdy.json  cth_like_fixed_bdy_nzeta_37.json  cth_like_free_bdy.json  input.cma  input.cth_like_fixed_bdy  input.cth_like_fixed_bdy_nzeta_37  input.cth_like_free_bdy  input.solovev  input.solovev_analytical  input.solovev_no_axis  jxbout_cma.nc  li383_low_res.json  makegrid_parameters_cth_like.json  mgrid_cth_like.nc  solovev.json  solovev_analytical.json  solovev_no_axis.json  wout_cma.nc  wout_cth_like_fixed_bdy.nc  wout_cth_like_fixed_bdy_nzeta_37.nc  wout_cth_like_free_bdy.nc  wout_solovev.nc  wout_solovev_analytical.nc  wout_solovev_no_axis.nc
src/vmecpp/cpp/vmecpp/vmec/: CMakeLists.txt
src/vmecpp/cpp/vmecpp/vmec/boundaries/: BUILD.bazel  CMakeLists.txt  boundaries.cc  boundaries.h  guess_magnetic_axis.cc  guess_magnetic_axis.h
src/vmecpp/cpp/vmecpp/vmec/fourier_coefficients/: BUILD.bazel  CMakeLists.txt  fourier_coefficients.cc  fourier_coefficients.h
src/vmecpp/cpp/vmecpp/vmec/fourier_forces/: BUILD.bazel  CMakeLists.txt  fourier_forces.cc  fourier_forces.h
src/vmecpp/cpp/vmecpp/vmec/fourier_geometry/: BUILD.bazel  CMakeLists.txt  fourier_geometry.cc  fourier_geometry.h
src/vmecpp/cpp/vmecpp/vmec/fourier_velocity/: BUILD.bazel  CMakeLists.txt  fourier_velocity.cc  fourier_velocity.h
src/vmecpp/cpp/vmecpp/vmec/handover_storage/: BUILD.bazel  CMakeLists.txt  handover_storage.cc  handover_storage.h
src/vmecpp/cpp/vmecpp/vmec/ideal_mhd_model/: BUILD.bazel  CMakeLists.txt  dft_data.h  (+4 more)
(+90 files in other folders)
