# Find available modules at https://registry.bazel.build

module(name = "vmecpp", version = "0.1")

bazel_dep(name = "abseil-cpp", version = "20230802.0.bcr.1")
bazel_dep(name = "eigen", version = "3.4.0")
bazel_dep(name = "google_benchmark", version = "1.8.2")
bazel_dep(name = "googletest", version = "1.14.0")

bazel_dep(name = "nlohmann_json", version = "3.11.3")
bazel_dep(name = "protobuf", version = "23.1")

# Pybind11: see https://github.com/pybind/pybind11_bazel#bzlmod
bazel_dep(name = "pybind11_bazel", version = "2.11.1")
python_configure = use_extension("@pybind11_bazel//:python_configure.bzl", "extension")
use_repo(python_configure, "local_config_python", "pybind11")

bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "rules_foreign_cc", version = "0.10.1")
