# SPDX-FileCopyrightText: 2024-present Proxima Fusion GmbH <info@proximafusion.com>
#
# SPDX-License-Identifier: MIT
cc_library(
    name = "hdf5_io",
    srcs = ["hdf5_io.cc"],
    hdrs = ["hdf5_io.h"],
    visibility = ["//visibility:public"],
    deps = [
        "@eigen",
        "//third_party/hdf5",
    ],
)
