add_subdirectory(composed_types_definition)
add_subdirectory(composed_types_lib)
add_subdirectory(flow_control)
add_subdirectory(fourier_basis_fast_poloidal)
add_subdirectory(fourier_basis_fast_toroidal)
add_subdirectory(magnetic_configuration_definition)
add_subdirectory(magnetic_configuration_lib)
add_subdirectory(magnetic_field_provider)
add_subdirectory(makegrid_lib)
add_subdirectory(sizes)
add_subdirectory(util)
add_subdirectory(vmec_indata)
set (vmecpp_sources "${vmecpp_sources}" PARENT_SCOPE)
