# SPDX-FileCopyrightText: 2024-present Proxima Fusion GmbH <info@proximafusion.com>
#
# SPDX-License-Identifier: MIT
cc_library(
    name = "fourier_basis_fast_poloidal",
    srcs = ["fourier_basis_fast_poloidal.cc"],
    hdrs = ["fourier_basis_fast_poloidal.h"],
    visibility = ["//visibility:public"],
    deps = [
        "@abseil-cpp//absl/algorithm:container",
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/strings:str_format",
        "//vmecpp/common/util:util",
        "//vmecpp/common/sizes:sizes",
    ],
)

cc_test(
    name = "fourier_basis_fast_poloidal_test",
    srcs = ["fourier_basis_fast_poloidal_test.cc"],
    deps = [
        ":fourier_basis_fast_poloidal",
        "@googletest//:gtest_main",
        "@nlohmann_json//:json",
        "//util/file_io:file_io",
        "//util/testing:numerical_comparison_lib",
        "//vmecpp/common/util:util",
        "//vmecpp/common/sizes:sizes",
        "@abseil-cpp//absl/algorithm:container",
    ],
    size = "small",
)
