# SPDX-FileCopyrightText: 2024-present Proxima Fusion GmbH <info@proximafusion.com>
#
# SPDX-License-Identifier: MIT
cc_library(
    name = "magnetic_field_provider_lib",
    visibility = ["//visibility:public"],
    srcs = ["magnetic_field_provider_lib.cc"],
    hdrs = ["magnetic_field_provider_lib.h"],
    deps = [
        "//vmecpp/common/composed_types_definition:composed_types",
        "//vmecpp/common/composed_types_lib:composed_types_lib",
        "//vmecpp/common/magnetic_configuration_definition:magnetic_configuration",
        "//vmecpp/common/magnetic_configuration_lib:magnetic_configuration_lib",
        "@abscab_cpp//abscab:abscab",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/log:log",
        "@abseil-cpp//absl/log:check",
    ],
)

cc_test(
    name = "magnetic_field_provider_lib_test",
    srcs = ["magnetic_field_provider_lib_test.cc"],
    data = [
      # we don't copy these files in the repo
      # "//vmec_validation/coils",
    ],
    deps = [
        ":magnetic_field_provider_lib",
        "@googletest//:gtest_main",
        "//util/testing:numerical_comparison_lib",
    ],
)
